--- a/coursehub/src/components/about/about.css
+++ b/coursehub/src/components/about/about.css
@@ -1,5 +1,6 @@
-/* .aboutHome {
+.aboutHome {
   height: auto;
+  background-color: #fff;
 }
 .aboutHome #heading {
   text-align: left;
@@ -18,6 +19,7 @@
 }
 .aboutHome .item {
   background-color: #fff;
+  box-shadow: 0 5px 25px -2px rgb(0 0 0 / 9%);
   margin-top: 30px;
   padding: 20px;
   transition: 0.5s;
@@ -37,7 +39,7 @@
   color: #999999;
 }
 .aboutHome .item:hover {
-  background-color: #1eb2a6;
+  background-color: #c53f00;
   color: #fff;
   cursor: pointer;
   box-shadow: 0 5px 25px -2px rgb(0 0 0 / 6%);
@@ -45,38 +47,12 @@
 .aboutHome .item:hover p {
   color: #fff;
 }
-*/
-/*----------awrapper------------*/
-/*.awrapper {
-  background-image: url("../../../public/images/awrapper.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 30vh;
-  color: #fff;
-}
-.awrapper .box {
-  padding: 70px 0;
-}
-.awrapper img {
-  margin-right: 30px;
-}
-.awrapper h1 {
-  font-size: 50px;
-}
-.awrapper h3 {
-  font-size: 20px;
-  font-weight: 500;
-} */
-/*----------awrapper------------*/
-/* @media screen and (max-width: 768px) {
+
+@media screen and (max-width: 768px) {
   .aboutHome .container {
     flex-direction: column-reverse;
   }
   .aboutHome .row {
     width: 100%;
   }
-  .awrapper {
-    height: 50vh;
-  }
-} */
+}
